samples/_failures_safe/1761318697_88ce3d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_667afbc4.c: In function ‘main’:
./samples/SAFE/__tmp_667afbc4.c:159:25: error: expected ‘)’ at end of input
  159 |     } while (choice != 3
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_667afbc4.c:159:5: error: expected declaration or statement at end of input
  159 |     } while (choice != 3
      |     ^
